[gd_scene load_steps=4 format=2]

[ext_resource path="res://texture_button_option_selector/texture_button_option_selector.tscn" type="PackedScene" id=1]
[ext_resource path="res://option_selector_with_decoupled_arrow_progress_bar/option_selector_with_decoupled_arrow_progress_bar.gd" type="Script" id=4]
[ext_resource path="res://arrow_progress_bar/arrow_progress_bar.tscn" type="PackedScene" id=8]

[node name="OptionSelectorWithDecoupledArrowProgressBar" type="Node2D"]
script = ExtResource( 4 )

[node name="OptionSelector" parent="." instance=ExtResource( 1 )]

[node name="ArrowProgressBar" parent="." instance=ExtResource( 8 )]
position = Vector2( 532, 1216 )

[node name="Plus" type="TextureButton" parent="."]
margin_left = 634.0
margin_top = 181.0
margin_right = 875.0
margin_bottom = 422.0
expand = true

[node name="Minus" type="TextureButton" parent="."]
margin_left = 137.0
margin_top = 173.0
margin_right = 378.0
margin_bottom = 414.0
rect_min_size = Vector2( 241, 241 )
expand = true

[node name="TextLabel" type="Label" parent="."]
margin_left = 78.0
margin_top = 1301.0
margin_right = 1023.0
margin_bottom = 1460.0
text = "El elemento seleccionado
es el No"
align = 1

[node name="NumberLabel" type="Label" parent="."]
margin_left = 500.0
margin_top = 1492.0
margin_right = 586.0
margin_bottom = 1570.0
text = "10"

[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
